more api and impl capabilities

--- a/natalciaguilds-api/pom.xml
+++ b/natalciaguilds-api/pom.xml
@@ -25,6 +25,10 @@
       <artifactId>jsr305</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
