--- a/natalciaguilds-bukkit/pom.xml
+++ b/natalciaguilds-bukkit/pom.xml
@@ -43,5 +43,9 @@
       <version>1.8.8-R0.1-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+    </dependency>
   </dependencies>
 </project>
