--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.8.1</version>
       </dependency>
+      <dependency>
+        <groupId>org.jetbrains</groupId>
+        <artifactId>annotations</artifactId>
+        <version>13.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
