--- a/natalciaguilds-bukkit/pom.xml
+++ b/natalciaguilds-bukkit/pom.xml
@@ -46,6 +46,7 @@
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
