--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.8.1</version>
       </dependency>
+      <dependency>
+        <groupId>org.reflections</groupId>
+        <artifactId>reflections</artifactId>
+        <version>0.9.11</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
