--- a/natalciaguilds-bukkit/pom.xml
+++ b/natalciaguilds-bukkit/pom.xml
@@ -36,6 +36,10 @@
       <id>placeholderapi</id>
       <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
     </repository>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -73,5 +77,12 @@
       <version>2.8.7</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.jasuogra</groupId>
+      <artifactId>ScoreBoardLibRefreshed</artifactId>
+      <version>955dd3926f</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
+
 </project>
