removed implementation from natalciaguilds-api module and moved it to natalciaguilds-core.

--- a/natalciaguilds-bukkit/pom.xml
+++ b/natalciaguilds-bukkit/pom.xml
@@ -46,6 +46,12 @@
     <dependency>
       <groupId>xyz.yooniks.natalciaguilds</groupId>
       <artifactId>natalciaguilds-api</artifactId>
+      <version>0.2-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>xyz.yooniks.natalciaguilds</groupId>
+      <artifactId>natalciaguilds-core</artifactId>
       <version>0.1-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
