--- a/natalciaguilds-core/pom.xml
+++ b/natalciaguilds-core/pom.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>natalciaguilds</artifactId>
     <groupId>xyz.yooniks</groupId>
     <version>0.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
 
   <groupId>xyz.yooniks.natalciaguilds</groupId>
-  <artifactId>natalciaguilds-api</artifactId>
-  <version>0.2-SNAPSHOT</version>
-  <name>NatalciaGuilds API</name>
+  <artifactId>natalciaguilds-core</artifactId>
+  <version>0.1-SNAPSHOT</version>
+
+  <name>NatalciaGuilds Core</name>
 
   <dependencies>
+    <dependency>
+      <groupId>xyz.yooniks.natalciaguilds</groupId>
+      <artifactId>natalciaguilds-api</artifactId>
+      <version>0.2-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
@@ -24,6 +30,11 @@
       <groupId>com.google.code.findbugs</groupId>
       <artifactId>jsr305</artifactId>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>28.0-jre</version>
     </dependency>
   </dependencies>
 
